## Copyright (C) 2011  Trevor Woerner

########################
## src/Makefile.am
########################
SUBDIRS =
AM_LDFLAGS = $(X_LIBS)
#AM_CFLAGS = $(X_CFLAGS) -Wall -Werror -Wextra -Wconversion -Wreturn-type -Wstrict-prototypes
AM_CFLAGS = $(X_CFLAGS) -Wall -Wextra -Wconversion -Wreturn-type -Wstrict-prototypes

bin_PROGRAMS = asmem
asmem_SOURCES = asmem.c asmem.h alphabet.xpm background.xpm
